@@ -1,10 +1,12 @@
 package ru.practicum.shareit.item;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
+import ru.practicum.shareit.item.model.Comment;
+import org.springframework.web.server.ResponseStatusException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.server.ResponseStatusException;
 import ru.practicum.shareit.booking.BookingRepository;
 import ru.practicum.shareit.booking.dto.BookingShortDto;
 import ru.practicum.shareit.booking.model.Booking;
@@ -14,8 +16,8 @@ import ru.practicum.shareit.item.dto.CommentRequestDto;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.dto.ItemWithBookingsDto;
 import ru.practicum.shareit.item.model.Item;
-import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.UserRepository;
+import ru.practicum.shareit.user.model.User;
 
 import java.time.LocalDateTime;
 import java.util.Collections;
@@ -23,6 +25,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
@@ -36,70 +39,139 @@ public class ItemServiceImpl implements ItemService {
     @Override
     @Transactional
     public ItemDto createItem(Long userId, ItemDto itemDto) {
-        User user = getUserOrThrow(userId);
+        log.info("Создание вещи пользователем {}", userId);
+
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
+                        "Пользователь с ID " + userId + " не найден"));
+
         validateItemData(itemDto);
+
         Item item = ItemMapper.toItem(itemDto, user);
         Item savedItem = itemRepository.save(item);
+        log.info("Вещь создана с ID {}", savedItem.getId());
+
         return ItemMapper.toItemDto(savedItem);
     }
 
     @Override
     @Transactional
     public ItemDto updateItem(Long userId, Long itemId, ItemDto itemDto) {
-        getUserOrThrow(userId);
-        Item existingItem = getItemOrThrow(itemId);
+        log.info("Обновление вещи {} пользователем {}", itemId, userId);
 
-        if (!existingItem.getOwner().getId().equals(userId)) {
+        if (!userRepository.existsById(userId)) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND,
+                    "Пользователь с ID " + userId + " не найден");
+        }
+
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
+                        "Вещь с ID " + itemId + " не найдена"));
+
+        if (!item.getOwner().getId().equals(userId)) {
             throw new ResponseStatusException(HttpStatus.FORBIDDEN,
                     "Пользователь с ID " + userId + " не является владельцем вещи");
         }
 
-        validateUpdateData(itemDto);
+        // Обновление полей
+        if (itemDto.getName() != null && !itemDto.getName().isBlank()) {
+            item.setName(itemDto.getName());
+        }
 
-        updateItemFields(existingItem, itemDto);
+        if (itemDto.getDescription() != null && !itemDto.getDescription().isBlank()) {
+            item.setDescription(itemDto.getDescription());
+        }
 
-        Item updatedItem = itemRepository.save(existingItem);
+        if (itemDto.getAvailable() != null) {
+            item.setAvailable(itemDto.getAvailable());
+        }
+
+        Item updatedItem = itemRepository.save(item);
         return ItemMapper.toItemDto(updatedItem);
     }
 
     @Override
     public ItemWithBookingsDto getItemById(Long userId, Long itemId) {
-        Item item = getItemOrThrow(itemId);
+        log.info("Получение вещи {} пользователем {}", itemId, userId);
 
-        LocalDateTime now = LocalDateTime.now();
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
+                        "Вещь с ID " + itemId + " не найдена"));
 
-        List<CommentDto> commentDtos = getCommentsForItem(itemId);
+        List<CommentDto> comments = commentRepository.findAllByItemId(itemId).stream()
+                .map(CommentMapper::toCommentDto)
+                .collect(Collectors.toList());
 
-        System.out.println("Item " + itemId + " has " + commentDtos.size() + " comments");
+        if (userId != null && item.getOwner().getId().equals(userId)) {
+            LocalDateTime now = LocalDateTime.now();
 
-        if (isUserOwner(userId, item)) {
-            return getItemWithBookings(item, now, commentDtos);
-        } else {
-            return ItemMapper.toItemWithBookingsDto(item, commentDtos);
+            List<Booking> lastBookings = bookingRepository.findLastBooking(itemId, now);
+            BookingShortDto lastBooking = null;
+            if (!lastBookings.isEmpty()) {
+                lastBooking = mapToBookingShortDto(lastBookings.get(0));
+            }
+
+            List<Booking> nextBookings = bookingRepository.findNextBooking(itemId, now);
+            BookingShortDto nextBooking = null;
+            if (!nextBookings.isEmpty()) {
+                nextBooking = mapToBookingShortDto(nextBookings.get(0));
+            }
+
+            return ItemMapper.toItemWithBookingsDto(item, lastBooking, nextBooking, comments);
         }
+
+        return ItemMapper.toItemWithBookingsDto(item, comments);
     }
 
     @Override
     public List<ItemWithBookingsDto> getAllUserItems(Long userId) {
-        getUserOrThrow(userId);
+        log.info("Получение всех вещей пользователя {}", userId);
+
+        if (!userRepository.existsById(userId)) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND,
+                    "Пользователь с ID " + userId + " не найден");
+        }
 
         List<Item> items = itemRepository.findAllByOwnerIdOrderByIdAsc(userId);
         LocalDateTime now = LocalDateTime.now();
 
-        Map<Long, List<CommentDto>> commentsByItemId = getCommentsForItems(items);
+        List<Long> itemIds = items.stream().map(Item::getId).collect(Collectors.toList());
+        Map<Long, List<Booking>> bookingsByItem = bookingRepository.findAllByItemIdsOrderByItemAndStart(itemIds).stream()
+                .filter(b -> b.getStatus() == Status.APPROVED)
+                .collect(Collectors.groupingBy(b -> b.getItem().getId()));
 
-        Map<Long, BookingInfo> bookingInfoByItemId = getBookingInfoForItemsOptimized(items, now);
+        Map<Long, List<CommentDto>> commentsByItem = commentRepository.findAllByItemIdIn(itemIds).stream()
+                .collect(Collectors.groupingBy(
+                        c -> c.getItem().getId(),
+                        Collectors.mapping(CommentMapper::toCommentDto, Collectors.toList())
+                ));
 
         return items.stream()
                 .map(item -> {
-                    BookingInfo info = bookingInfoByItemId.getOrDefault(item.getId(),
-                            new BookingInfo(null, null));
+                    List<Booking> itemBookings = bookingsByItem.getOrDefault(item.getId(), Collections.emptyList());
+
+                    BookingShortDto lastBooking = null;
+                    BookingShortDto nextBooking = null;
+
+                    if (!itemBookings.isEmpty()) {
+                        lastBooking = itemBookings.stream()
+                                .filter(b -> b.getStart().isBefore(now))
+                                .reduce((first, second) -> second)
+                                .map(this::mapToBookingShortDto)
+                                .orElse(null);
+
+                        nextBooking = itemBookings.stream()
+                                .filter(b -> b.getStart().isAfter(now))
+                                .findFirst()
+                                .map(this::mapToBookingShortDto)
+                                .orElse(null);
+                    }
 
                     return ItemMapper.toItemWithBookingsDto(
                             item,
-                            info.getLastBooking(),
-                            info.getNextBooking(),
-                            commentsByItemId.getOrDefault(item.getId(), Collections.emptyList())
+                            lastBooking,
+                            nextBooking,
+                            commentsByItem.getOrDefault(item.getId(), Collections.emptyList())
                     );
                 })
                 .collect(Collectors.toList());
@@ -107,8 +179,10 @@ public class ItemServiceImpl implements ItemService {
 
     @Override
     public List<ItemDto> searchItems(String text) {
+        log.info("Поиск вещей по тексту: {}", text);
+
         if (text == null || text.trim().isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         return itemRepository.searchAvailableByText(text).stream()
@@ -119,29 +193,42 @@ public class ItemServiceImpl implements ItemService {
     @Override
     @Transactional
     public CommentDto addComment(Long userId, Long itemId, CommentRequestDto commentRequestDto) {
-        User author = getUserOrThrow(userId);
-        Item item = getItemOrThrow(itemId);
+        log.info("Добавление комментария к вещи {} пользователем {}", itemId, userId);
+
+        User author = userRepository.findById(userId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
+                        "Пользователь с ID " + userId + " не найден"));
+
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
+                        "Вещь с ID " + itemId + " не найдена"));
 
         LocalDateTime now = LocalDateTime.now();
 
-        checkUserHasCompletedBooking(userId, itemId, now);
+        List<Booking> completedBookings = bookingRepository
+                .findByBookerIdAndItemIdAndEndBeforeAndStatusOrderByEndDesc(
+                        userId, itemId, now, Status.APPROVED);
 
-        Comment comment = createComment(commentRequestDto, item, author, now);
+        if (completedBookings.isEmpty()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
+                    "Пользователь может оставить отзыв только после завершения аренды вещи");
+        }
+
+        if (commentRequestDto.getText() == null || commentRequestDto.getText().isBlank()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
+                    "Текст комментария не может быть пустым");
+        }
+
+        Comment comment = new Comment();
+        comment.setText(commentRequestDto.getText());
+        comment.setItem(item);
+        comment.setAuthor(author);
+        comment.setCreated(now);
+
         Comment savedComment = commentRepository.save(comment);
+        log.info("Комментарий добавлен с ID {}", savedComment.getId());
 
         return CommentMapper.toCommentDto(savedComment);
-    }
-
-    private User getUserOrThrow(Long userId) {
-        return userRepository.findById(userId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
-                        "Пользователь с ID " + userId + " не найден"));
-    }
-
-    private Item getItemOrThrow(Long itemId) {
-        return itemRepository.findById(itemId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
-                        "Вещь с ID " + itemId + " не найдена"));
     }
 
     private void validateItemData(ItemDto itemDto) {
@@ -156,52 +243,7 @@ public class ItemServiceImpl implements ItemService {
         }
     }
 
-    private void validateUpdateData(ItemDto itemDto) {
-        if (itemDto.getName() != null && itemDto.getName().isBlank()) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Название не может быть пустым");
-        }
-        if (itemDto.getDescription() != null && itemDto.getDescription().isBlank()) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Описание не может быть пустым");
-        }
-    }
-
-    private void updateItemFields(Item item, ItemDto itemDto) {
-        if (itemDto.getName() != null) {
-            item.setName(itemDto.getName());
-        }
-        if (itemDto.getDescription() != null) {
-            item.setDescription(itemDto.getDescription());
-        }
-        if (itemDto.getAvailable() != null) {
-            item.setAvailable(itemDto.getAvailable());
-        }
-    }
-
-    private boolean isUserOwner(Long userId, Item item) {
-        return userId != null && item.getOwner().getId().equals(userId);
-    }
-
-    private List<CommentDto> getCommentsForItem(Long itemId) {
-        return commentRepository.findAllByItemId(itemId).stream()
-                .map(CommentMapper::toCommentDto)
-                .collect(Collectors.toList());
-    }
-
-    private ItemWithBookingsDto getItemWithBookings(Item item, LocalDateTime now, List<CommentDto> comments) {
-        List<Booking> lastBookings = bookingRepository.findLastBooking(item.getId(), now);
-        List<Booking> nextBookings = bookingRepository.findNextBooking(item.getId(), now);
-
-        BookingShortDto lastBookingDto = createBookingShortDto(lastBookings);
-        BookingShortDto nextBookingDto = createBookingShortDto(nextBookings);
-
-        return ItemMapper.toItemWithBookingsDto(item, lastBookingDto, nextBookingDto, comments);
-    }
-
-    private BookingShortDto createBookingShortDto(List<Booking> bookings) {
-        if (bookings == null || bookings.isEmpty()) {
-            return null;
-        }
-        Booking booking = bookings.get(0);
+    private BookingShortDto mapToBookingShortDto(Booking booking) {
         return BookingShortDto.builder()
                 .id(booking.getId())
                 .bookerId(booking.getBooker().getId())
@@ -209,98 +251,5 @@ public class ItemServiceImpl implements ItemService {
                 .end(booking.getEnd())
                 .status(booking.getStatus())
                 .build();
-    }
-
-    private Map<Long, List<CommentDto>> getCommentsForItems(List<Item> items) {
-        List<Long> itemIds = items.stream().map(Item::getId).collect(Collectors.toList());
-
-        if (itemIds.isEmpty()) {
-            return Collections.emptyMap();
-        }
-
-        return commentRepository.findAllByItemIdIn(itemIds).stream()
-                .collect(Collectors.groupingBy(
-                        comment -> comment.getItem().getId(),
-                        Collectors.mapping(CommentMapper::toCommentDto, Collectors.toList())
-                ));
-    }
-
-    private Map<Long, BookingInfo> getBookingInfoForItemsOptimized(List<Item> items, LocalDateTime now) {
-        List<Long> itemIds = items.stream().map(Item::getId).collect(Collectors.toList());
-
-        if (itemIds.isEmpty()) {
-            return Collections.emptyMap();
-        }
-
-        List<Booking> allBookings = bookingRepository.findAllByItemIdsOrderByItemAndStart(itemIds);
-
-        Map<Long, List<Booking>> bookingsByItemId = allBookings.stream()
-                .filter(booking -> booking.getStatus() == Status.APPROVED)
-                .collect(Collectors.groupingBy(
-                        booking -> booking.getItem().getId()
-                ));
-
-        return items.stream()
-                .collect(Collectors.toMap(
-                        Item::getId,
-                        item -> {
-                            List<Booking> itemBookings = bookingsByItemId.getOrDefault(item.getId(), Collections.emptyList());
-
-                            // Последнее бронирование (с датой начала в прошлом)
-                            Booking lastBooking = itemBookings.stream()
-                                    .filter(b -> b.getStart().isBefore(now))
-                                    .reduce((first, second) -> second) // Берем последнее (с наибольшей датой)
-                                    .orElse(null);
-
-                            // Следующее бронирование (с датой начала в будущем)
-                            Booking nextBooking = itemBookings.stream()
-                                    .filter(b -> b.getStart().isAfter(now))
-                                    .findFirst()
-                                    .orElse(null);
-
-                            return new BookingInfo(
-                                    createBookingShortDto(lastBooking != null ? List.of(lastBooking) : Collections.emptyList()),
-                                    createBookingShortDto(nextBooking != null ? List.of(nextBooking) : Collections.emptyList())
-                            );
-                        }
-                ));
-    }
-
-    private void checkUserHasCompletedBooking(Long userId, Long itemId, LocalDateTime now) {
-        List<Booking> completedBookings = bookingRepository
-                .findByBookerIdAndItemIdAndEndBeforeAndStatusOrderByEndDesc(
-                        userId, itemId, now, Status.APPROVED);
-
-        if (completedBookings.isEmpty()) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                    "Пользователь может оставить отзыв только после завершения аренды вещи");
-        }
-    }
-
-    private Comment createComment(CommentRequestDto commentRequestDto, Item item, User author, LocalDateTime now) {
-        Comment comment = new Comment();
-        comment.setText(commentRequestDto.getText());
-        comment.setItem(item);
-        comment.setAuthor(author);
-        comment.setCreated(now);
-        return comment;
-    }
-
-    private static class BookingInfo {
-        private final BookingShortDto lastBooking;
-        private final BookingShortDto nextBooking;
-
-        public BookingInfo(BookingShortDto lastBooking, BookingShortDto nextBooking) {
-            this.lastBooking = lastBooking;
-            this.nextBooking = nextBooking;
-        }
-
-        public BookingShortDto getLastBooking() {
-            return lastBooking;
-        }
-
-        public BookingShortDto getNextBooking() {
-            return nextBooking;
-        }
     }
 }
